nuke yourkit-profile, put these back properly and uniformly if needed