@@ -541,27 +541,6 @@
         </dependency>
       </dependencies>
     </profile>
-
-    <profile>
-      <id>yourkit-profile</id>
-      <activation>
-        <property>
-          <name>yourkit.agent</name>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-failsafe-plugin</artifactId>
-            <configuration>
-              <!-- for Yourkit session, we left more memory intentionally -->
-              <argLine>-XX:PermSize=220m -XX:MaxPermSize=220m -Xmx600M -XX:+HeapDumpOnOutOfMemoryError -agentpath:"${yourkit.agent}"</argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
   </profiles>
 
 </project>
